Tree growing (#6)
Overall a lot of changes. Mainly added functionality related to parsing of tokens from tokenizer to make a forest. As well as related outputs form such.


* Grumble Packages External JAR

Corrected issue with using external JAR and named packages.

* Subroutine For Cases

Added subroutine to be use internally for switch cases.

* Minor Changes

Reranaged Simularion.java.

Reremovd TEST_RESTRICTED_CHARS.java which was accidently readded.

Added subroutines to Tree_Assembler.java.

* House Keeping

Fixed 5 Card Poker Test.txt.

Added some notes in various places.

Continued Tree_Assembler.java.

* Added Concrete_Parent

Updated affected classes.

Continued Tree_Assembler.java.

* Forest be Growing

Added a few more subroutines, such that the rest should just be function
calls until getting to the tree part.

* Fixed Tokenizer

Added forgotten true and false values.

Corrected edge case that could have resulted in a keyword being mistaken
for an id.

* Finished handling of literal values

Adjusted grammar slightly to have both = and ; be the result of a simple
production rule.

Finished adding all cases relating to literal values. Also reworked some
subroutines.

* Removed Unused file

Forgot to remove this in a past commit.

* Corrected Compatibility Issue

Was using List.of which is from Java 9, though this project is meant to
be compatible with Java 8.

* Committed Patricide

Essentially merged Concreate_Parent with Evaluable for Tree_Assembler's
syntactical_stack.

* Final Massive Commit

Regarding generated files. Essentially they have been updated to latest
version. They can be somewhat ignored for views, though is a way to
check what outputs look like.

For parser section: corrected minor oversights in Tree_Assembler.java.

* Minor change to Decklist output

Did not bother recreating them though.

* Minor Renaming

No functional changes.

* Update README.md

Up