@@ -1,28 +1,27 @@
-<<<<<<< HEAD
 package structure;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 /**
 <b>
 Purpose: Base of the binary operators.<br>
 Programmer: Gabriel Toban Harris <br>
-Date: 2021-07-24/2021-8-3
+Date: 2021-07-24/2021-8-3/2021-8-10/2021-8-19
 </b>
 */
 
-public abstract class Binary_Operator_Node<T> extends Base_Node<T>
+public abstract class Binary_Operator_Node extends Base_Node
 {
     /**
      * Left operand.
      */
-    public final Evaluable<T> LEFT_CHILD;
+    public final Evaluable LEFT_CHILD;
 
     /**
      * Right operand.
      */
-    public final Evaluable<T> RIGHT_CHILD;
+    public final Evaluable RIGHT_CHILD;
 
     /**
      * Constructor.
@@ -31,7 +30,7 @@ public abstract class Binary_Operator_Node<T> extends Base_Node<T>
      * @param LEFT_CHILD is the left operand of the operator
      * @param RIGHT_CHILD is the right operand of the operator
      */
-    public Binary_Operator_Node(String NAME, final Evaluable<T> LEFT_CHILD, final Evaluable<T> RIGHT_CHILD)
+    public Binary_Operator_Node(String NAME, final Evaluable LEFT_CHILD, final Evaluable RIGHT_CHILD)
     {
         super(NAME);
         this.LEFT_CHILD = LEFT_CHILD;
@@ -48,47 +47,8 @@ public abstract class Binary_Operator_Node<T> extends Base_Node<T>
     }
 
     @Override
-    protected Collection<? extends Evaluable<T>> continue_breath_search()
+    protected Collection<? extends Evaluable> continue_breath_search()
     {
-        return List.of(this.LEFT_CHILD, this.RIGHT_CHILD);
+        return Arrays.asList(this.LEFT_CHILD, this.RIGHT_CHILD);
     }
 }
-=======
-package structure;
-
-/**
-<b>
-Purpose: Base of the binary operators.<br>
-Programmer: Gabriel Toban Harris <br>
-Date: 2021-07-24
-</b>
-*/
-
-//TODO: consider converting to at least 2
-public abstract class Binary_Operator_Node<T> extends Base_Node<T>
-{
-    /**
-     * Left operand.
-     */
-    public final Evaluable<T> LEFT_CHILD;
-
-    /**
-     * Right operand.
-     */
-    public final Evaluable<T> RIGHT_CHILD;
-
-    /**
-     * Constructor.
-     * 
-     * @param NAME of the node
-     * @param LEFT_CHILD is the left operand of the operator
-     * @param RIGHT_CHILD is the right operand of the operator
-     */
-    public Binary_Operator_Node(String NAME, final Evaluable<T> LEFT_CHILD, final Evaluable<T> RIGHT_CHILD)
-    {
-        super(NAME);
-        this.LEFT_CHILD = LEFT_CHILD;
-        this.RIGHT_CHILD = RIGHT_CHILD;
-    }
-}
->>>>>>> parent of 3a3d00d... Clean Up
