@@ -1,25 +1,28 @@
-<<<<<<< HEAD
 package structure;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 /**
 <b>
 Purpose: Not Operator<br>
-Programmer: Gabriel Toban Harris, Alexander Herman Oxorn <br>
+Programmer: Gabriel Toban Harris, Alexander Herman Oxorn
 </b>
 */
 
-public class Not_Operator_Node<T> extends Base_Node<T>
+public class Not_Operator_Node extends Base_Node
 {
     /**
      * Child which is negated.
      */
-    public final Evaluable<T> CHILD;
+    public final Evaluable CHILD;
 
-    public Not_Operator_Node(final Evaluable<T> CHILD)
+    /**
+     * Constructor. Meaning of operator is the lack of something. Thus looking for NOT A would only be true if A was not unreserved in remaining hand.
+     * 
+     * @param CHILD to be negated.
+     */
+    public Not_Operator_Node(final Evaluable CHILD)
     {
         super("NOT");
         this.CHILD = CHILD;
@@ -45,46 +48,8 @@ public class Not_Operator_Node<T> extends Base_Node<T>
     }
 
     @Override
-    protected Collection<? extends Evaluable<T>> continue_breath_search()
+    protected Collection<? extends Evaluable> continue_breath_search()
     {
-        return List.of(this.CHILD);
+        return Arrays.asList(this.CHILD);
     }
 }
-=======
-package structure;
-
-import java.util.Collection;
-
-/**
-<b>
-Purpose: Not Operator<br>
-Programmer: Gabriel Toban Harris, Alexander Herman Oxorn <br>
-Date: 2021-07-24
-</b>
-*/
-
-public class Not_Operator_Node<T> extends Base_Node<T>
-{
-    /**
-     * Child which is negated.
-     */
-    public final Evaluable<T> CHILD;
-
-    public Not_Operator_Node(final Evaluable<T> CHILD)
-    {
-        super("NOT");
-        this.CHILD = CHILD;
-    }
-
-    @Override
-    public <E extends Reservable> TestResult evaluate(Collection<E> hand, RollbackCallback next) {
-        printDebugStep(hand);
-        TestResult result = CHILD.evaluate(hand, () -> TestResult.NotSuccess);
-        if (result == TestResult.NotSuccess) {
-            return TestResult.Rollback;
-        }
-        // result should only ever be TestResult.Rollback here
-        return next.call();
-    }
-}
->>>>>>> parent of 3a3d00d... Clean Up
